# emoto-print

./: Cargo.toml  emotes.json
.github/workflows/: ci.yaml
src/: emote.rs  main.rs  option.rs
