[package]
name = "emoto-print"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = "3.2.8"
gcode = "0.6.1"
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
